a1/brendan_gordon/TEST_PROGRAMS/invalidtype/evan_mcilroy/invalid_type_three.min
var a: float;
var b: int;

a = 3;
a = 3 + 3.0;
b = "hi";
a = b;

